# knockout

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
include/: knockout.h  knockout_functional.h
src/: knockout.cpp  knockoutApp.cpp  knockout_functional.cpp
tests/: knockoutTest.cpp
